--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+.kanban-container {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  background-color: #f7f9fc;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.kanban-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.display-dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+details {
+  cursor: pointer;
+  display: inline-block;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px 10px;
+  width: 120px;
+}
+
+details summary {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  list-style: none;
+  outline: none;
+  padding: 5px 10px;
+}
+
+.display-title {
+  color: rgb(79, 76, 76);
+}
+
+details summary img:first-child {
+  margin-right: 10px; /* Add space between first image and text */
+}
+
+details summary img:last-child {
+  margin-left: 10px; /* Add space between text and last image */
+}
+
+h1 {
+  color: rgb(86, 85, 85);
+  font-size: 38px;
+  border: 2px solid grey;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.dropdown {
+  display: flex;
+  flex-direction: column; /* By default, labels and selects will be in columns */
+  gap: 10px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 10px; /* Creates space between the dropdown and the button */
+  z-index: 10; /* Ensures the dropdown appears above other content */
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Creates a shadow to make the dropdown appear elevated */
+  min-width: 200px;
+}
+
+.dropdown-label {
+  padding: 10px;
+  font-size: 15px;
+  color: #a3a1a1;
+  margin-right: 10px; /* Space between label and select menu */
+}
+
+.dropdown-row {
+  display: flex;
+  align-items: center; /* Vertically aligns label and select in the center */
+  justify-content: space-between; /* Ensures there's space between the label and the select */
+}
+
+.dropdown select {
+  border-color: #a3a1a1;
+  border-radius: 5px;
+  margin-left: 50px;
+  padding: 5px;
+  width: 120px; /* Adjust width as needed */
 }
