--- a/src/TaskColumn.css
+++ b/src/TaskColumn.css
@@ -15,18 +15,16 @@
 
 .right-icons {
   display: flex;
-  gap: 6px; /* Space between icons */
-  margin-left: auto; /* This will push the icons to the right */
+  gap: 6px;
+  margin-left: auto;
 }
 
-/* Specific styling for the add icon */
 .add-icon {
-  width: 16px; /* Adjust size as needed */
+  width: 16px;
   height: 16px;
   cursor: pointer;
 }
 
-/* Specific styling for the dots icon */
 .dot-icon {
   width: 16px;
   height: 16px;
@@ -34,13 +32,13 @@
 }
 
 .status-icon {
-  margin-right: 4px; /* Spacing between the icon and title */
-  width: 24px; /* Set width as needed */
+  margin-right: 4px;
+  width: 24px;
   height: 24px;
 }
 
 .task-column-header h2 {
-  margin: 0 8px; /* Space between the title and task count */
+  margin: 0 8px;
 }
 
 .groupName {
@@ -62,16 +60,16 @@
 }
 
 .user-initials {
-  width: 30px; /* Set width */
-  height: 30px; /* Set height */
-  border-radius: 50%; /* Makes it round */
-  background-color: #333; /* Dark background color */
-  color: white; /* Text color for the initials */
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #333;
+  color: white;
   display: flex;
-  justify-content: center; /* Center text horizontally */
-  align-items: center; /* Center text vertically */
-  font-weight: bold; /* Make initials bold */
-  font-size: 14px; /* Adjust font size as needed */
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .user-initials-container {
@@ -100,13 +98,12 @@
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  border: 2px solid #f0f4f8; /* Match the background color of the task column */
+  border: 2px solid #f0f4f8;
 }
 
 .availability-indicator.available {
-  background-color: #ffa500; /* Orange color for available users */
+  background-color: #ffa500;
 }
-
 .availability-indicator.unavailable {
-  background-color: #808080; /* Gray color for unavailable users */
+  background-color: #808080;
 }
