--- a/src/TaskColumn.css
+++ b/src/TaskColumn.css
@@ -1,9 +1,15 @@
 .task-column {
   background-color: #f0f4f8;
   width: 300px;
-  margin: 0 10px;
+  min-width: 300px;
+  margin: 0 5px 10px;
   padding: 10px;
   border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  max-height: calc(
+    100vh - 100px
+  ); /* Adjust this value based on your header height */
 }
 
 .task-column-header {
@@ -19,12 +25,7 @@
   margin-left: auto;
 }
 
-.add-icon {
-  width: 16px;
-  height: 16px;
-  cursor: pointer;
-}
-
+.add-icon,
 .dot-icon {
   width: 16px;
   height: 16px;
@@ -43,33 +44,22 @@
 
 .groupName {
   margin-left: 5px;
+  font-size: 14px;
 }
 
 .count {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   color: grey;
   margin-left: 8px;
-  margin-top: 3px;
 }
 
 .task-list {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.user-initials {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #333;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  font-size: 14px;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .user-initials-container {
@@ -104,6 +94,20 @@
 .availability-indicator.available {
   background-color: #ffa500;
 }
+
 .availability-indicator.unavailable {
   background-color: #808080;
+}
+
+@media (max-width: 768px) {
+  .task-column {
+    width: 90%;
+    min-width: auto;
+    margin: 0 0 10px;
+    max-height: none;
+  }
+
+  .task-list {
+    overflow-y: visible;
+  }
 }
